--- a/src/shared/subject-header/SubjectHeader.module.scss
+++ b/src/shared/subject-header/SubjectHeader.module.scss
@@ -4,7 +4,7 @@ $header-height: 10rem;
 
 .header {
     height: $header-height;
-    min-width: 50rem; // During Development
+    max-width: 50rem; // During Development
     width: 100%;
 
     &-container {
