--- a/src/shared/math/math.module.scss
+++ b/src/shared/math/math.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/main';
+
 .math {
     display: flex;
     flex-direction: column;
@@ -6,7 +8,8 @@
     width: 90vw; // Will change to inherit height once the rest of the content is created
 
     &__content {
-        background-color: #FBA41B;
+        // background-color: #FBA41B;
+        background-color: $color-primary;
         flex-grow: 1;
     }
 }
