--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -32,7 +32,7 @@
         z-index: 10;
     }
 
-    &__blocks { // kinder-3rd grade
+    &__blocks { // kinder-2nd grade
         @extend .heading;
     }
 }
