Added a navigation bar

--- a/src/features/subject/components/subject-sub-header/SubHeader.module.scss
+++ b/src/features/subject/components/subject-sub-header/SubHeader.module.scss
@@ -1,6 +1,6 @@
-@import '../../../styles/main';
+@import '../../../../styles/main';
 
-.header {
+.sub-header {
     background-color: $color-primary;
     height: 7rem;
     width: 100%;
