refactored components to use proper component composition

--- a/src/features/navigation/navigation.module.scss
+++ b/src/features/navigation/navigation.module.scss
@@ -1,1 +1,6 @@
-.nav {}
+@import '../../styles/main';
+
+// redo this without hte use of important
+.nav {
+    background-color: $color-primary !important;
+}
