refactored components to be more S.O.L.I.D

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,4 +1,8 @@
+// Colors
 $color-primary: #1B94FB;
 $color-secondary: #10E02D;
 $color-secondary-dark: #02610F;
 $color-tertiary: #A16324;
+
+// Component Specific
+$header-height: 15rem;
