Created a login component

--- a/src/features/navigation/navigation.module.scss
+++ b/src/features/navigation/navigation.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/main';
 
-// redo this without hte use of important
+// redo this without the use of important
 .nav {
     background-color: $color-primary !important;
 }
