--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $color-primary: #1B94FB;
 $color-secondary: #10E02D;
 $color-secondary-dark: #02610F;
-$color-tertiary: #A16324;
+$color-tertiary: rgb(255, 158, 61);
 
 // Component Specific
 $header-height: 15rem;
